--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -40,6 +40,7 @@
         android:id="@+id/rvNotes"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingTop="16dp"
         android:clipToPadding="false"
         android:paddingBottom="90dp"
         app:layout_constraintTop_toBottomOf="@+id/search_box"
