--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/note_title"
+        android:textColor="@color/white"
         android:maxLines="1"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
