--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -40,7 +40,8 @@
         android:layout_marginEnd="16dp"
         android:maxLines="1"
         android:hint="@string/title"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/light_gray"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/arrowBack" />
@@ -54,7 +55,8 @@
         android:layout_marginBottom="16dp"
         android:gravity="top"
         android:hint="@string/note"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/light_gray"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
