--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/custom_black"
     android:padding="8dp"
     tools:context=".presentation.main_screen.NoteListFragment">
 
@@ -13,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:textColor="@color/white"
         android:text="@string/all_notes"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +23,7 @@
     <EditText
         android:id="@+id/search_box"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_margin="10dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/search_box_background"
@@ -30,6 +32,8 @@
         android:inputType="text"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/light_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +44,6 @@
         android:id="@+id/rvNotes"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:paddingTop="16dp"
         android:clipToPadding="false"
         android:paddingBottom="90dp"
         app:layout_constraintTop_toBottomOf="@+id/search_box"
